--- a/Index.html
+++ b/Index.html
@@ -116,7 +116,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 text-lg-start py-lg-5 my-lg-5 text-uppercase" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50" data-aos-once="true">
-          <h1 class="H-titles py-lg-5 my-lg-5">Works</h1>
+          <h1 class="H-titles py-lg-5 my-lg-5">My Works.</h1>
         </div>
         
         <div class="col-lg-9 pt-3 p-lg-5">
@@ -158,7 +158,7 @@
                 <div class="carousel-item"data-bs-ride="carousel">
                   <img src="Image/PTraining.jpeg" class="w-100 pd-lg-5 rounded" alt="...">
                   <div class="carousel-caption d-none d-lg-block">
-                    <h5>Personal Training</h5>
+                    <h5>Personal Group Training</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos tempora corrupti quis odio a aspernatur id, culpa nihil eaque, itaque quod, recusandae cum. 
                       Cum, dolores illo labore consectetur dolor tempora delectus amet sapiente, id, reiciendis fugiat eligendi! Repellendus dignissimos maxime deleniti architecto. 
                       Saepe officiis delectus atque consequuntur illum consectetur, accusantium neque ratione porro et nam dolores similique odit error quis fugiat ducimus asperiores 
@@ -175,7 +175,7 @@
                 <div class="carousel-item"data-bs-ride="carousel">
                   <img src="Image/GTraining.jpeg" class="w-100 pd-lg-5 rounded" alt="...">
                   <div class="carousel-caption d-none d-lg-block ">
-                    <h5>Group Training</h5>
+                    <h5>Elderly Training</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos tempora corrupti quis odio a aspernatur id, culpa nihil eaque, itaque quod, recusandae cum. 
                       Cum, dolores illo labore consectetur dolor tempora delectus amet sapiente, id, reiciendis fugiat eligendi! Repellendus dignissimos maxime deleniti architecto. 
                       Saepe officiis delectus atque consequuntur illum consectetur, accusantium neque ratione porro et nam dolores similique odit error quis fugiat ducimus asperiores 
@@ -183,7 +183,7 @@
                       Laboriosam quam molestiae natus culpa. Fuga, earum. Fugiat eveniet repellat qui. Fugit eveniet ut maiores.</p>
                   </div>
                   <div class="d-md-block d-lg-none text-light rounded bg-dark pt-2 border-bottom border-light rounded-bottom">
-                    <h5>Group Training</h5>
+                    <h5>Elderly Training</h5>
                     <p class="btn btn-outline-info btn-sm"
                     data-bs-toggle="modal"
                     data-bs-target="#readMore3">Read More</p>
