--- a/Index.html
+++ b/Index.html
@@ -166,7 +166,7 @@
                       Laboriosam quam molestiae natus culpa. Fuga, earum. Fugiat eveniet repellat qui. Fugit eveniet ut maiores.</p>
                   </div>
                   <div class="d-md-block d-lg-none text-light bg-dark pt-2 border-bottom border-light rounded-bottom">
-                    <h5>Personal Training</h5>
+                    <h5>Personal Group Training</h5>
                     <p class="btn btn-outline-info btn-sm"
                     data-bs-toggle="modal"
                     data-bs-target="#readMore2">Read More</p>
