--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YR Coaching | Portfolio </title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Quicksand:wght@300;400;500;600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="./scss/style.scss">
+  <link rel="stylesheet" href="./scss/style.css">
+  <link rel="stylesheet" href="Font 6/css/all.css">
+  <link rel="stylesheet" href="Font 6/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
@@ -69,6 +83,17 @@
     </div>
   </section>
 
+  <div class="contact-me fixed-bottom pb-10 ">
+    <button class="call-btn1" type="button" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'});"><i class="fa fa-comments" aria-hidden="true"></i></button>
+  </div>
+
+  <span class="mb-5 pb-5 flex-column fs-lg-5 p-1 text-dark sticky-bottom fixed-bottom"> 
+    <div><a href="" class="bi bi-instagram text-dark mx-1 mx-lg-5 pb-2"></a></div>
+    <div><a href="" class="bi bi-facebook text-dark mx-1 mx-lg-5 pb-2"></a></div>
+    <div><a href="" class="bi bi-whatsapp text-dark mx-1 mx-lg-5 pb-2"></a></div>
+    <div><a href="" class="bi bi-twitter text-dark mx-1 mx-lg-5 pb-5"></a></div>
+  </span>
+
   <!--About Me-->
 
   <section class="bg-light p-5 py-lg-5 text-dark text-center about pt-5" id="About">
@@ -80,7 +105,7 @@
         <div class="col-lg-9 my-5" data-aos-duration="2000" data-aos-delay="50" data-aos="fade-up">
           <div class="row">
             <div class="col-12 col-lg-8 my-lg-3 clearfix">
-              <img class="img-fluid rounded-circle shadow bg-body rounded col-md-12 mb-4 ms-md-1" src="Image/Success.jpeg" alt="">
+              <img class="img-fluid rounded shadow bg-body rounded col-md-12 mb-4 ms-md-1" src="Image/Success.jpeg" alt="">
             </div>
 
             <div class="col-12 col-lg-4 my-lg-5 text-center">
@@ -101,14 +126,6 @@
       </div>
     </div>
   </section>
-
-  <span class="mb-5 pb-5 flex-column fs-lg-5 p-1 text-dark sticky-bottom"> 
-    <div><a href="" class="bi bi-instagram text-dark mx-1 mx-lg-5 pb-2"></a></div>
-    <div><a href="" class="bi bi-facebook text-dark mx-1 mx-lg-5 pb-2"></a></div>
-    <div><a href="" class="bi bi-whatsapp text-dark mx-1 mx-lg-5 pb-2"></a></div>
-    <div><a href="" class="bi bi-twitter text-dark mx-1 mx-lg-5 pb-5"></a></div>
-  </span>
-  
 
   <!-- programmes -->
 
