--- a/Index.html
+++ b/Index.html
@@ -48,13 +48,13 @@
           </li>
           <div class="vr"></div>
           <li class="nav-item p-lg-3">
-              <a href="#About" class="nav-link">About Me</a>
+            <a href="#About" class="nav-link">About Me</a>
           </li>
           <li class="nav-item p-lg-3">
-              <a href="#Programmes" class="nav-link">Works</a>
+            <a href="#Programmes" class="nav-link">Works</a>
           </li>
           <li class="nav-item p-lg-3">
-              <a href="#Contact" class="nav-link">Contacts</a>
+            <a href="#Contact" class="nav-link">Contacts</a>
           </li>
         </ul>
       </div>
@@ -87,7 +87,7 @@
     <button class="call-btn1" type="button" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'});"><i class="fa fa-comments" aria-hidden="true"></i></button>
   </div>
 
-  <span class="mb-5 pb-5 flex-column fs-lg-5 p-1 text-dark sticky-bottom fixed-bottom"> 
+  <span class="mb-5 pb-5 flex-column fs-lg-5 p-1 text-dark fixed-bottom"> 
     <div><a href="" class="bi bi-instagram text-dark mx-1 mx-lg-5 pb-2"></a></div>
     <div><a href="" class="bi bi-facebook text-dark mx-1 mx-lg-5 pb-2"></a></div>
     <div><a href="" class="bi bi-whatsapp text-dark mx-1 mx-lg-5 pb-2"></a></div>
@@ -99,8 +99,8 @@
   <section class="bg-light p-5 py-lg-5 text-dark text-center about pt-5" id="About">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 text-lg-start my-auto text-uppercase" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50" data-aos-once="true">
-          <h1>About Me</h1> 
+        <div class="col-lg-3 text-lg-start my-auto" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50" data-aos-once="true">
+          <h1>About</h1> 
         </div>
         <div class="col-lg-9 my-5" data-aos-duration="2000" data-aos-delay="50" data-aos="fade-up">
           <div class="row">
@@ -132,8 +132,8 @@
   <section class="bg-light p-3 text-dark text-center programmes" id="Programmes">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 text-lg-start py-lg-5 my-lg-5 text-uppercase" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50" data-aos-once="true">
-          <h1 class="H-titles py-lg-5 my-lg-5">My Works.</h1>
+        <div class="col-lg-3 text-lg-start py-lg-5 my-lg-5" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50" data-aos-once="true">
+          <h1 class="H-titles py-lg-5 my-lg-5">Works.</h1>
         </div>
         
         <div class="col-lg-9 pt-3 p-lg-5">
@@ -343,8 +343,8 @@
   <section class="bg-dark p-3 py-lg-5 text-white" id="Contact" >
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 text-center text-lg-start my-auto text-uppercase" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50" data-aos-once="true">
-          <h1>Contact Info</h1>
+        <div class="col-lg-3 text-center text-md-start my-auto" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50" data-aos-once="true">
+          <h1>Contacts</h1>
         </div>
         <div class="col-lg-9 py-5"data-aos-delay="20" data-aos="zoom-in">
           <div class="row g-2">
