--- a/Index.html
+++ b/Index.html
@@ -63,7 +63,7 @@
 
                       <!--    Homepage Section    -->
 
-  <section class="back text-light p-5 bg-light">
+  <section class="back text-light p-5 bg-light vh-100">
     <div class="container my-2" data-aos="fade-right" data-aos-duration="1000" data-aos-once="true">
       <div class="Home-details">
         <div class="col-lg-7 offset-lg-5 p-1 mt-50">
